package org.example.model;

public class InvestigacionInvalidaException extends RuntimeException {
    public InvestigacionInvalidaException(String message) {
        super(message);
    }
}
