package org.example.model;

public class JugadoresException extends RuntimeException {
    public JugadoresException(String message) {
        super(message);
    }
}
