package org.example.model;

public class NominacionInvalidaException extends RuntimeException {
    public NominacionInvalidaException(String message) {
        super(message);
    }
}
