package org.example.model;

public class RepartoRolesInvalidoException extends RuntimeException {
    public RepartoRolesInvalidoException(String message) {
        super(message);
    }
}
