package org.example.model;

public class RevelacionInvalidaException extends RuntimeException {
    public RevelacionInvalidaException(String message) {
        super(message);
    }
}
