package org.example.model;

public class VotacionInvalidaException extends RuntimeException {
    public VotacionInvalidaException(String message) {
        super(message);
    }
}
